Create MySQL RDS using terraform and update the app to use the new setup (credentials retrieved from AWS Secrets Manager)

--- a/ansible/roles/app/files/index.html
+++ b/ansible/roles/app/files/index.html
@@ -203,7 +203,7 @@
 
 </div>
 
-<!-- <script>
+<script>
 async function updateCounter() {
     if (!sessionStorage.getItem("counted")) {
 
@@ -221,7 +221,7 @@ async function updateCounter() {
 }
 
 updateCounter();
-</script> -->
+</script>
 
 
 </body>
