Add new /info route and two scripts to simulate traffic

--- a/ansible/roles/flask/files/index.html
+++ b/ansible/roles/flask/files/index.html
@@ -37,8 +37,9 @@
             </div>
         </div>
     </header>
-
-
+<div style="text-align:center; margin: 20px 0;">
+    <a href="/info.html" class="info-button">ℹ️ Backend Info</a>
+</div>
     <!-- SUMMARY -->
     <main>
         <section class="section">
